# kagi

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  deny.toml  dprint.json  flake.nix  install.sh
.github/: release-notes.md
.github/workflows/: ci.yml  claude-code-review.yml  release.yml  tag-on-version-bump.yml
skills/maps/: SKILL.md
skills/search/: SKILL.md
skills/summarize/: SKILL.md
src/: cli.rs  client.rs  error.rs  lib.rs  output.rs  parse.rs  telemetry.rs
tests/: cli.rs  live.rs  parse.rs
tests/fixtures/maps/: search.json
tests/fixtures/search/: basic.html  grouped.html  welcome.html  zero-results.html
