[package]
name = "kagi"
version = "0.2.1"
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/rubas/kagi"
keywords = ["kagi", "search", "cli", "summarize"]
license = "MIT"
repository = "https://github.com/rubas/kagi"
description = "Unix-style CLI for Kagi search and URL summarization"

[[bin]]
name = "kagi-search"
path = "src/bin/kagi-search.rs"

[[bin]]
name = "kagi-summarize"
path = "src/bin/kagi-summarize.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "wrap_help"] }
rquest = { version = "5", features = ["cookies", "json"] }
rquest-util = "2"
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
