[package]
name = "kagi"
version = "0.4.0"
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/rubas/kagi"
keywords = ["kagi", "search", "maps", "summarize", "cli"]
license = "MIT"
repository = "https://github.com/rubas/kagi"
description = "Unix-style CLI for Kagi search, maps, and URL summarization"

[lints.rust]
unsafe-code = "forbid"

[[bin]]
name = "kagi-search"
path = "src/bin/kagi-search.rs"

[[bin]]
name = "kagi-summarize"
path = "src/bin/kagi-summarize.rs"

[[bin]]
name = "kagi-maps"
path = "src/bin/kagi-maps.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
wreq = { version = "5.3.0", features = ["cookies", "json"] }
wreq-util = "2.2.6"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
